--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "mocha test/*.ts"
   },
   "dependencies": {
+    "@jspsych/plugin-html-button-response": "^1.1.3",
+    "@jspsych/plugin-survey": "^0.2.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.3",
+    "jspsych": "^7.3.4",
     "tsx": "^4.7.1"
   }
 }
